--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
 <h1>Hello</h1>
+
+<form action="/action_page.php">
+  Enter your outfit's URL here: 
+  <input type="outfit" id="1">
+  <input type="submit">
+  <br>(sample: https://www1.flightrising.com/dressing/outfit/2593826)
+</form> 
+
+
