Update4 index.html

--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 <h1>Hello</h1>
 
-<form action="/action_page.php" onsubmit="showingImg()">>
+<form action="/action_page.php" onsubmit="showing()">>
   Enter your outfit's URL here: 
   <input type="outfit" id="1">
   <input type="submit">
   <br>(sample: https://www1.flightrising.com/dressing/outfit/2593826)
 </form> 
 
-<canvas id="picture" width="350" height="350"><canvas>
   <script>
-    function showingImg(){
-      <img src="1">;
-      
+    function showing(){
+      var x = document.getElementById("1");
+      <img src=x>;
     };
 
-    
   </script>
 
