UpdateFixForm index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>Hello</h1>
 
-<form action="/action_page.php" onsubmit="showing()">>
+<form onsubmit="showing()">
   Enter your outfit's URL here: 
   <input type="outfit" id="1">
   <input type="submit">
