Update5 index.html
Now need to add "action_page.php"

--- a/index.html
+++ b/index.html
@@ -1,17 +1,9 @@
 <h1>Hello</h1>
 
-<form onsubmit="showing()">
+<form action="/action_page.php">
   Enter your outfit's URL here: 
   <input type="outfit" id="1">
   <input type="submit">
   <br>(sample: https://www1.flightrising.com/dressing/outfit/2593826)
 </form> 
-
-  <script>
-    function showing(){
-      var x = document.getElementById("1");
-      <img src=x>;
-    };
-
-  </script>
 
