Update6 index.html

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <form action="/action_page.php">
   Enter your outfit's URL here: 
-  <input type="outfit" id="1">
-  <input type="submit">
+  <br><input type="URL">
+  <br><input type="submit">
   <br>(sample: https://www1.flightrising.com/dressing/outfit/2593826)
 </form> 
 
