Update5 index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>Hello</h1>
 
-<form action="/action_page.php">
+<form>
   Enter your outfit's URL here: 
   <br><input type="URL">
   <br><input type="submit">
