--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <h1>Hello</h1>
 
-<form>
-  Enter your outfit's URL here: 
-  <br><input type="URL">
+<form action="WhereMagicHappens.php">
+  <label for="outfitURL">Enter your outfit's URL here: </label>
+  <br><input type="URL" id="outfitURL" name="outfitURL">
   <br><input type="submit">
   <br>(sample: https://www1.flightrising.com/dressing/outfit/2593826)
 </form> 
