--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>Hello</h1>
 
-<form action="WhereMagicHappens.php" method="POST">
+<form action="WhereMagicHappens.php">
   <label for="outfitURL">Enter your outfit's URL here: </label>
   <br><input type="URL" id="outfitURL" name="outfitURL">
   <br><input type="submit">
