--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
-<h1>Hello</h1>
+<!DOCTYPE html>
+<html>
+<body>
 
-<form action="???">
-  <label for="outfitURL">Enter your outfit's URL here: </label>
-  <br><input type="URL" id="outfitURL" name="outfitURL">
-  <br><input type="submit">
-  <br>(sample: https://www1.flightrising.com/dressing/outfit/2593826)
-</form> 
+<h2>Hello :3</h2>
+<label for="outfitURL">Enter your outfit's URL here: </label>
+<br><input type="URL" id="outfitURL" name="outfitURL">
+<button type="button"
+onclick="document.getElementById('magic')..src='outfitURL'">
+Click to display images.</button>
 
+<p id="magic"></p>
+
+</body>
+</html> 
