--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
 <h2>Hello :3</h2>
 <label for="outfitURL">Enter your outfit's URL here: </label>
 <br><input type="URL" id="outfitURL" name="outfitURL">
-<button type="button"
-onclick="document.getElementById('magic')..src='outfitURL'">
+<button onclick="document.getElementById('magic')..src='outfitURL'">
 Click to display images.</button>
-
+<img id="magic" src="outfitUR" style="width:350px">
 <p id="magic"></p>
 
 </body>
