--- a/index.html
+++ b/index.html
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html>
-<body>
-
-<h2>Hello :3</h2>
-<label for="outfitURL">Enter your outfit's URL here: </label>
-<br><input type="URL" id="outfitURL" name="outfitURL">
-<button onclick="document.write(outfitURL + "outfitURL" + 'outfitURL')">
-Click to display images.</button>
-
-</body>
-</html> 
+<script>
+  var address = prompt("Enter your outfit's URL here:");
+  println(address);
+</script>
