--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
+<input type="text" id="address" placeholder="Enter outfit URL here :3"> 
+
 <script>
-  var address = prompt("Enter your outfit's URL here:");
-  println(address);
+  
 </script>
