--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <input type="text" id="address" placeholder="Enter outfit URL here :3"> 
-
+<input type="button" value="Go!">
 <script>
   
 </script>
