--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
   const heads = document.getElementById('heads');
 
   function func() {
-    origin.innerHTML = address.value;
+    origin.innerHTML = <img src="address.value" alt="original outfit goes here">;
   }
 
   magic.addEventListener('click',func);
   
 </script>
+
+
+*Thank you, Ralph Phillips from Six Minutes. Smarter., for the youtube video guide: https://www.youtube.com/watch?v=aEj0Wu33hJM.
