--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <input type="text" id="address" placeholder="Enter outfit URL here :3"> 
 <input type="button" id="magic" value="Go!">
-<p class="output" id="origin"></p>
+<img class="output" id="origin"></img>
 <p class="output" id="heads"></p>
 
 
@@ -11,7 +11,7 @@
   const heads = document.getElementById('heads');
 
   function func() {
-    origin.innerHTML = <img src="address.value" alt="original outfit goes here">;
+    origin.innerHTML = src="address.value" alt="original outfit goes here";
   }
 
   magic.addEventListener('click',func);
