--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <input type="text" id="address" placeholder="Enter outfit URL here :3"> 
 <input type="button" id="magic" value="Go!">
-<img class="output" id="origin"></img>
+<img class="image" id="origin">
 <p class="output" id="heads"></p>
 
 
