--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 });
 
   function func() {
-    
+    something should happen here
     origin.changeImageSrc(address.value);
     head1m.changeImageSrc(address.value);
 
