--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<br> version x
+<br> version q
 <br><input type="text" id="address" placeholder="Enter outfit URL here: "> 
 <br><button onclick="chchchchchchanges()">Go!</button>
 <br><img id="origin" class="responsive" src="https://www1.flightrising.com/dgen/dressing-room/dragon?did=63158483&skin=0&apparel=10369,10963,50788,817,34617,37393,45179&xt=dressing.png" alt="Hi there :3">
@@ -10,10 +10,10 @@
   function chchchchchchanges() {
     const address = document.getElementById('address');
     var origin = document.getElementById('origin');
-    img.src = address;
+    img.src = address.value;
 
     var head1m = document.getElementById('head1m');
-    head1m.src = address;
+    head1m.src = address.value;
 
   }
 
