--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<br> version e
-<br><input type="text" id="address" placeholder="Enter outfit URL here: "> 
+<br> version r
+<br><input type="text" id="address" placeholder="Enter outfit URL here: " value=""> 
 <br><button onclick="chchchchchchanges()">Go!</button>
 <br><img id="origin" class="responsive" src="https://www1.flightrising.com/dgen/dressing-room/dragon?did=63158483&skin=0&apparel=10369,10963,50788,817,34617,37393,45179&xt=dressing.png" alt="Hi there :3">
 <br><img id="head1m" src="https://i.ibb.co/QM0P9JT/h1m.png" alt="Mannequin1m">
