--- a/index.html
+++ b/index.html
@@ -1,9 +1,48 @@
-<br> version r
-<br><input type="text" id="address" placeholder="Enter outfit URL here: " value=""> 
-<br><button onclick="chchchchchchanges()">Go!</button>
-<br><img id="origin" class="responsive" src="https://www1.flightrising.com/dgen/dressing-room/dragon?did=63158483&skin=0&apparel=10369,10963,50788,817,34617,37393,45179&xt=dressing.png" alt="Hi there :3">
-<br><img id="head1m" src="https://i.ibb.co/QM0P9JT/h1m.png" alt="Mannequin1m">
 
+
+<br> version t (all initial pictures should work, but the after is still not functioning.)
+<br> Using arcane flag for fast checking: https://www1.flightrising.com/static/layout/revamp/banners/arcane_small.png
+
+<br><input type="text" id="address" placeholder="Enter outfit URL here: " value=""> 
+
+<br><button onclick="chchchchchchanges()">Go!</button>
+
+<br><img id="origin" class="responsive" src="https://www1.flightrising.com/dgen/dressing-room/dragon?did=63158483&skin=0&apparel=10369,10963,50788,817,34617,37393,45179&xt=dressing.png" alt="Hi there :3">
+
+<br><img id="head1m" src="https://i.ibb.co/QM0P9JT/h1m.png" alt="Mannequin1m">
+<img id="head1f" src="https://i.ibb.co/vkfYhzy/h1f.png" alt="Mannequin1f">
+<img id="head2m" src="https://i.ibb.co/Dr5gdvK/h2m.png" alt="Mannequin2m">
+<img id="head2f" src="https://i.ibb.co/RgJ8NY9/h2f.png" alt="Mannequin2f">
+<img id="head3m" src="https://i.ibb.co/qrjDT15/h3m.png" alt="Mannequin3m">
+<img id="head3f" src="https://i.ibb.co/ZTZ0Gqv/h3f.png" alt="Mannequin3f">
+
+<br><img id="head4m" src="https://i.ibb.co/G301Wwp/h4m.png" alt="Mannequin4m">
+<img id="head4f" src="https://i.ibb.co/zFgQH1L/h4f.png" alt="Mannequin4f">
+<img id="head5m" src="https://i.ibb.co/8KYYZdf/h5m.png" alt="Mannequin5m">
+<img id="head5f" src="https://i.ibb.co/d2jQ9fM/h5f.png" alt="Mannequin5f">
+<img id="head6m" src="https://i.ibb.co/GsLm420/h6m.png" alt="Mannequin6m">
+<img id="head6f" src="https://i.ibb.co/jvSGQxY/h6f.png" alt="Mannequin6f">
+
+<br><img id="head7m" src="https://i.ibb.co/BNYBmgf/h7m.png" alt="Mannequin7m">
+<img id="head7f" src="https://i.ibb.co/Y3RW3c2/h7f.png" alt="Mannequin7f">
+<img id="head8m" src="https://i.ibb.co/Wcx3wRz/h8m.png" alt="Mannequin8m">
+<img id="head8f" src="https://i.ibb.co/tqJtJ3M/h8f.png" alt="Mannequin8f">
+<img id="head9m" src="https://i.ibb.co/FYLDVq2/h9m.png" alt="Mannequin9m">
+<img id="head9f" src="https://i.ibb.co/hK8CPMr/h9f.png" alt="Mannequin9f">
+
+<br><img id="head10m" src="https://i.ibb.co/9V7ySL7/h10m.png" alt="Mannequin1m">
+<img id="head1f" src="https://i.ibb.co/tYP7XrH/h10f.png" alt="Mannequin10f">
+<img id="head11m" "https://i.ibb.co/9NhRL52/h11m.png" alt="Mannequin11m">
+<img id="head11f" src="https://i.ibb.co/RDYJYVR/h11f.png" alt="Mannequin11f">
+<img id="head12m" src="https://i.ibb.co/4gGkH8k/h12m.png" alt="Mannequin12m">
+<img id="head12f" src="https://i.ibb.co/yX5xwx1/h12f.png" alt="Mannequin12f">
+
+<br><img id="head13m" src="https://i.ibb.co/D15XVzv/h13m.png" alt="Mannequin13m">
+<img id="head13f" src="https://i.ibb.co/xLMM9dC/h13f.png" alt="Mannequin13f">
+<img id="head14m" src="https://i.ibb.co/0XcTVJT/h14m.png" alt="Mannequin14m">
+<img id="head14f" src="https://i.ibb.co/s1fywp9/h14f.png" alt="Mannequin14f">
+<img id="head15m" src="https://i.ibb.co/QM86bmD/h15m.png" alt="Mannequin15m">
+<img id="head15f" src="https://i.ibb.co/gSFbSCX/h15f.png" alt="Mannequin15f">
 
 <script>
   
@@ -16,8 +55,39 @@
 
     var head1m = document.getElementById('head1m');
     head1m.src = address.value + '';
+    head1f.src = address.value + '';
+    head2m.src = address.value + '';
+    head2f.src = address.value + '';
+    head3m.src = address.value + '';
+    head3f.src = address.value + '';
+    head4m.src = address.value + '';
+    head4f.src = address.value + '';
+    head5m.src = address.value + '';
+    head5f.src = address.value + '';
+    head6m.src = address.value + '';
+    head6f.src = address.value + '';
+    head7m.src = address.value + '';
+    head7f.src = address.value + '';
+    head8m.src = address.value + '';
+    head8f.src = address.value + '';
+    head9m.src = address.value + '';
+    head9f.src = address.value + '';
+    head10m.src = address.value + '';
+    head10f.src = address.value + '';
+    head11m.src = address.value + '';
+    head11f.src = address.value + '';
+    head12m.src = address.value + '';
+    head12f.src = address.value + '';
+    head13m.src = address.value + '';
+    head13f.src = address.value + '';
+    head14m.src = address.value + '';
+    head14f.src = address.value + '';
+    head15m.src = address.value + '';
+    head15f.src = address.value + '';
+    
 
   }
 
-  
 </script>
+
+
