--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 
-<br> version t (all initial pictures should work, but the after is still not functioning.)
+<br> version y (all initial pictures should work, but the after is still not functioning.)
 <br> Using arcane flag for fast checking: https://www1.flightrising.com/static/layout/revamp/banners/arcane_small.png
 
 <br><input type="text" id="address" placeholder="Enter outfit URL here: " value=""> 
@@ -31,8 +31,8 @@
 <img id="head9f" src="https://i.ibb.co/hK8CPMr/h9f.png" alt="Mannequin9f">
 
 <br><img id="head10m" src="https://i.ibb.co/9V7ySL7/h10m.png" alt="Mannequin1m">
-<img id="head1f" src="https://i.ibb.co/tYP7XrH/h10f.png" alt="Mannequin10f">
-<img id="head11m" "https://i.ibb.co/9NhRL52/h11m.png" alt="Mannequin11m">
+<img id="head10f" src="https://i.ibb.co/tYP7XrH/h10f.png" alt="Mannequin10f">
+<img id="head11m" src="https://i.ibb.co/9NhRL52/h11m.png" alt="Mannequin11m">
 <img id="head11f" src="https://i.ibb.co/RDYJYVR/h11f.png" alt="Mannequin11f">
 <img id="head12m" src="https://i.ibb.co/4gGkH8k/h12m.png" alt="Mannequin12m">
 <img id="head12f" src="https://i.ibb.co/yX5xwx1/h12f.png" alt="Mannequin12f">
@@ -54,6 +54,36 @@
     origin.src = address.value + '';
 
     var head1m = document.getElementById('head1m');
+    var head1f = document.getElementById('head1f');
+    var head2m = document.getElementById('head2m');
+    var head2f = document.getElementById('head2f');
+    var head3m = document.getElementById('head3m');
+    var head3f = document.getElementById('head3f');
+    var head4m = document.getElementById('head4m');
+    var head4f = document.getElementById('head4f');
+    var head5m = document.getElementById('head5m');
+    var head5f = document.getElementById('head5f');
+    var head6m = document.getElementById('head6m');
+    var head6f = document.getElementById('head6f');
+    var head7m = document.getElementById('head7m');
+    var head7f = document.getElementById('head7f');
+    var head8m = document.getElementById('head8m');
+    var head8f = document.getElementById('head8f');
+    var head9m = document.getElementById('head9m');
+    var head9f = document.getElementById('head9f');
+    var head10m = document.getElementById('head10m');
+    var head10f = document.getElementById('head10f');
+    var head11m = document.getElementById('head11m');
+    var head11f = document.getElementById('head11f');
+    var head12m = document.getElementById('head12m');
+    var head12f = document.getElementById('head12f');
+    var head13m = document.getElementById('head13m');
+    var head13f = document.getElementById('head13f');
+    var head14m = document.getElementById('head14m');
+    var head14f = document.getElementById('head14f');
+    var head15m = document.getElementById('head15m');
+    var head15f = document.getElementById('head15f');
+    
     head1m.src = address.value + '';
     head1f.src = address.value + '';
     head2m.src = address.value + '';
