--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 
 </style>
 
-<br> Version i (all initial pictures work. Now figuring out how to crop the dummies)
+<br> Version o (all initial pictures work. Now figuring out how to crop the dummies)
 <br><br> Using dummy for fast checking:<br>https://www1.flightrising.com/dgen/dressing-room/<span style="color:red">dummy?breed=14&gender=0</span>&skin=0&apparel=10369,10963,50788,817,34617,37393,45179&xt=dressing.png
 <br><br> Later will need to figure out how to turn "dragon" into "dummy" :<br>https://www1.flightrising.com/dgen/dressing-room/<span style="color:red">dragon?did=63158483</span>&skin=0&apparel=10369,10963,50788,817,34617,37393,45179&xt=dressing.png
 
-<br><input type="text" id="address" placeholder="Enter outfit URL here: " value=""> 
+<br><br><input type="text" id="address" placeholder="Enter outfit URL here: " value=""> 
 
-<br><button onclick="chchchchchchanges()">Go!</button>
-
+<br><br><button onclick="chchchchchchanges()">Go!</button>
+<center>
 <br><img id="origin" class="responsive" src="https://www1.flightrising.com/dgen/dressing-room/dragon?did=63158483&skin=0&apparel=10369,10963,50788,817,34617,37393,45179&xt=dressing.png" alt="Hi there :3">
 
 <br><img id="head1m" src="https://i.ibb.co/QM0P9JT/h1m.png" alt="Mannequin1m" >
@@ -66,7 +66,7 @@
 <img id="head15f" src="https://i.ibb.co/gSFbSCX/h15f.png" alt="Mannequin15f">
 
 
-
+</center>
 <script>
   
   function chchchchchchanges() {
@@ -83,7 +83,7 @@
     var head1m = document.getElementById('head1m');
     // head1m.src = address.value + '';
     head1m.style.display = "none";
-    <div class="new_male_1"></div>
+
 
     
     var head1f = document.getElementById('head1f');
@@ -152,5 +152,5 @@
   }
 
 </script>
-
+<div class="new_male_1"></div>
 
