--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 </style>
 
-<br> Version p (all initial pictures work. Now figuring out how to crop the dummies)
+<br> Version a (all initial pictures work. Now figuring out how to crop the dummies)
 <br><br> Using dummy for fast checking:<br>https://www1.flightrising.com/dgen/dressing-room/<span style="color:red">dummy?breed=14&gender=0</span>&skin=0&apparel=10369,10963,50788,817,34617,37393,45179&xt=dressing.png
 <br><br> Later will need to figure out how to turn "dragon" into "dummy" :<br>https://www1.flightrising.com/dgen/dressing-room/<span style="color:red">dragon?did=63158483</span>&skin=0&apparel=10369,10963,50788,817,34617,37393,45179&xt=dressing.png
 
@@ -82,7 +82,7 @@
     // testing on male 1
     var head1m = document.getElementById('head1m');
     // head1m.src = address.value + '';
-    head1m.document.getElementById('myElement').className = "new_male_1";
+    document.getElementById('head1m').className = "new_male_1";
 
 
     
