--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 </style>
 
-<br> Version d (all initial pictures work. Now figuring out how to crop the dummies)
+<br> Version f (all initial pictures work. Now figuring out how to crop the dummies)
 <br><br> Using dummy for fast checking:<br>https://www1.flightrising.com/dgen/dressing-room/<span style="color:red">dummy?breed=14&gender=0</span>&skin=0&apparel=10369,10963,50788,817,34617,37393,45179&xt=dressing.png
 <br><br> Later will need to figure out how to turn "dragon" into "dummy" :<br>https://www1.flightrising.com/dgen/dressing-room/<span style="color:red">dragon?did=63158483</span>&skin=0&apparel=10369,10963,50788,817,34617,37393,45179&xt=dressing.png
 
@@ -84,7 +84,7 @@
     var head1m = document.getElementById('head1m');
     // head1m.src = address.value + '';
     document.getElementById('head1m').className = "new_male_1";
-    document.getElementById('head1m').style.background-image: url(address.value + ''); /* The image used */  
+    document.getElementById('head1m').style.backgroundColor='red'; /* The image used */  
       
     // testing on female 1 to compare to male 1
     var head1f = document.getElementById('head1f');
