--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
   function changeImgH1M() {
         let img= document.querySelector("#head1m");
-        img.setAttribute('src',#head7f);
+        img.setAttribute('src',"#head7f");
   }    
   
   function chchchchchchanges() {
