--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 
 </style>
 <center>
-<br> Version 1.005 (all initial pictures work. Now figuring out how to change to the dummies (how to crop dummies will follow))
+<br> Version 1.006
+      <br>
+<br>(all initial pictures work. Now figuring out how to change to the dummies (how to crop dummies will follow))
 <br><br> Using dummy for fast checking:<br>https://www1.flightrising.com/dgen/dressing-room/<span style="color:red">dummy?breed=14&gender=0</span>&skin=0&apparel=10369,10963,50788,817,34617,37393,45179&xt=dressing.png
 <br><br> Later will need to figure out how to turn "dragon" into "dummy" :<br>https://www1.flightrising.com/dgen/dressing-room/<span style="color:red">dragon?did=63158483</span>&skin=0&apparel=10369,10963,50788,817,34617,37393,45179&xt=dressing.png
 
@@ -78,7 +80,7 @@
 
   function changeImgH1M() {
         let img= document.querySelector("#head1m");
-        img.setAttribute('src',"#head10f");
+        img.setAttribute('src',#head10f);
   }    
   
   function chchchchchchanges() {
