--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
   function changeImgH1M() {
         let img= document.querySelector("#head1m");
-        img.setAttribute('src',#head10f);
+        img.setAttribute('src',"#head10f");
   }    
   
   function chchchchchchanges() {
