--- a/index.html
+++ b/index.html
@@ -1,27 +1,5 @@
-<style>
-
-.new_male_1 { // creating a new class type named new_male_1 
-      opacity: 0.3;
-      height: 75px;
-      width: 75px;
-      
-      background-color: #cccccc; /* Used if the image is unavailable */
-      background-position: 10% 50%; /* x,y */
-      background-repeat: no-repeat; /* Do not repeat the image */
-    }
-
-.new_female_1 { // creating a new class type named new_female_1 
-      height: 75px;
-      width: 75px;
-      
-      background-color: #cccccc; /* Used if the image is unavailable */
-      background-position: 20% 60%; /* x,y */
-      background-repeat: no-repeat; /* Do not repeat the image */
-    }
-
-</style>
 <center>
-<br> Version 1.008
+<br> Version 1.009
       <br>
 <br>(Now figuring out how to change to the dummies (how to crop dummies will follow))
 <br><br> Using dummy for fast checking:<br>https://www1.flightrising.com/dgen/dressing-room/<span style="color:red">dummy?breed=14&gender=0</span>&skin=0&apparel=10369,10963,50788,817,34617,37393,45179&xt=dressing.png
@@ -95,9 +73,14 @@
       for (let i = 1; i < 17; i++) {
       	for (let j = 0; j < 2; j++) {
                   var img = document.createElement('img');
-                  img.src = "'"+urlTillBreedEquals+i+str2.substring(61,73)+j+str2.substring(74,str2.length)+"'";
+                  let result = "\'".concat(urlTillBreedEquals);
+                  result = result.concat(i);
+                  result = result.concat(str2.substring(61,73));
+                  result = result.concat(j);
+                  result = result.concat(str2.substring(74,str2.length));
+                  result = result.concat("\'");
+                  img.src = result;
                   document.getElementById("allHeads").appendChild(img);
-          	      // document.getElementById("allHeads").innerHTML += "<img src='"+urlTillBreedEquals+i+str2.substring(61,73)+j+str2.substring(74,str2.length)+"'>";
       	}
       }
   }
