--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <center>
-<br> Version 1.010
+<br> Version 1.011
       <br>
 <br>(Now figuring out how to change to the dummies (how to crop dummies will follow))
 <br><br> Using dummy for fast checking:<br>https://www1.flightrising.com/dgen/dressing-room/<span style="color:red">dummy?breed=14&gender=0</span>&skin=0&apparel=10369,10963,50788,817,34617,37393,45179&xt=dressing.png
@@ -73,12 +73,13 @@
       for (let i = 1; i < 17; i++) {
       	for (let j = 0; j < 2; j++) {
                   var img = document.createElement('img');
-                  let result = "\'".concat(urlTillBreedEquals);
+                  var sign = "'";
+                  let result = sign.concat(urlTillBreedEquals);
                   result = result.concat(i);
                   result = result.concat(str2.substring(61,73));
                   result = result.concat(j);
                   result = result.concat(str2.substring(74,str2.length));
-                  result = result.concat("\'");
+                  result = result.concat(sign);
                   img.src = result;
                   document.getElementById("allHeads").appendChild(img);
       	}
